--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
     </script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <a href="https://wa.link/q89zf5" style="position:fixed;
+    <a href="https://wa.link/cg48q9" style="position:fixed;
     width:60px;
     height:60px;
     bottom:40px;
